# pupa

./: Makefile  README.md  main.py  pyproject.toml
games_project_lazarenko.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
games_project_lazarenko/VD_games/: VD_main.py  cli.py  engine.py
games_project_lazarenko/VD_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
games_project_lazarenko/VD_games/scripts/: VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  brain_calc.py  vd_prime.py  vd_progression.py
