[project]
name = "games-project-lazarenko"
version = "0.7.0"
description = "VD Games Project"
requires-python = ">=3.12"
dependencies = [
    "prompt",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
pupa-game = "games_project_lazarenko.VD_games.scripts.VD_main:main"
brain-calc = "games_project_lazarenko.VD_games.scripts.brain_calc:main"
VD-gcd = "games_project_lazarenko.VD_games.scripts.VD_gcd:main"
VD-even = "games_project_lazarenko.VD_games.scripts.VD_even:main"
VD-progression = "games_project_lazarenko.VD_games.scripts.vd_progression:main"
VD-prime = "games_project_lazarenko.VD_games.scripts.vd_prime:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by line-length
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
